--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <title>JS Drum Kit</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
   </head>
   <body>
-    <h1 class="center">HIT THE KEYS, ENJOY THE MUSIC</h1>
     <div class="keys">
       <div data-key="65" class="key">
         <kbd>A</kbd>
